# logger-cpp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  ci_ubuntu.yml  ci_windows.yml  cmake.yml  linux_ci.yml  windows_ci.yml
benchmark/: main.cpp
cmake/: BuildConfig.hpp.in  force_include_header.cmake  generate_header.cmake
example/: CMakeLists.txt  example.cpp  example_level.cpp  example_multithread.cpp  example_noglobal.cpp  example_ptr.cpp  example_simple.cpp  example_terminate.cpp  logger_example.hpp  main.cpp
examples/: CMakeLists.txt  main.cpp
include/: Container.hpp  Logger.hpp  ProgressBar.hpp  Terminal.hpp  ThreadSafeStorage.hpp  ThreadedQ.hpp  define.hpp  macros.h  utils.hpp
include/cpplogger/: Level.hpp  Logger.hpp  define.hpp
include/cpplogger/formatters/: ColorFormatter.hpp  DefaultFormatter.hpp  IFormatter.hpp
include/cpplogger/internal/: GlobalMutex.hpp  StringLiteral.hpp
include/cpplogger/sinks/: ISink.hpp  StdoutSink.hpp
include/cpplogger/types/: ColorCodes.hpp  Level.hpp  Message.hpp  MessageBuffer.hpp  ProgressBar.hpp  Spinner.hpp  Stream.hpp
include/cpplogger/utils/: ColorCodes.hpp  Mutex.hpp  Size.hpp  demangle.hpp  mutex.hpp  sequences.hpp  source_location.hpp
include/interface/: IUpdate.hpp
include/types/: Level.hpp  MessageBuffer.hpp  ProgressBar.hpp  Spinner.hpp  Stream.hpp
include/utils/: concepts.hpp  demangle.hpp  demangle.hxx  mutex.hpp  sequences.hpp  source_location.hpp  source_location.hxx
source/: Logger.cpp  ProgressBar.cpp  Size.cpp  Terminal.cpp  handlers.cpp  lib.cpp
source/cpplogger/: Logger.hpp  define.hpp
source/cpplogger/formatters/: ColorFormatter.hpp  DefaultFormatter.hpp
source/cpplogger/internal/: StringLiteral.hpp
source/cpplogger/sinks/: FileSink.hpp  ISink.hpp  StdoutSink.hpp
source/cpplogger/types/: ColorCodes.hpp  Level.hpp  Message.hpp
source/formatters/: ColorFormatter.cpp  DefaultFormatter.cpp
source/sinks/: StdoutSink.cpp
source/types/: Level.cpp  MessageBuffer.cpp  ProgressBar.cpp  Spinner.cpp  Stream.cpp
