add_executable(example_terminate example_terminate.cpp)
target_link_libraries(example_terminate PRIVATE logger)

add_executable(example_multithread example_multithread.cpp)
target_link_libraries(example_multithread PRIVATE logger)

add_executable(example_level example_level.cpp)
target_link_libraries(example_level PRIVATE logger)

add_executable(example_simple example_simple.cpp)
target_link_libraries(example_simple PRIVATE logger)
